{
  "version": 4,
  "terraform_version": "0.14.7",
  "serial": 20,
  "lineage": "1a26ed22-9c97-cd67-e7ff-0b704be65e25",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "aem-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-02298f8bad7ab92bf",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-216-87-114.compute-1.amazonaws.com",
            "public_ip": "3.216.87.114",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Creator": "Terraform",
              "Name": "aem-eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "aem-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:449780421507:internet-gateway/igw-0eba42a140f257c14",
            "id": "igw-0eba42a140f257c14",
            "owner_id": "449780421507",
            "tags": {
              "Creator": "Terraform",
              "Environment": "aem internet gateway",
              "Name": "aem-igw"
            },
            "vpc_id": "vpc-0f6e9f116f774fde0"
          },
          "dependencies": [
            "aws_vpc.aem-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "aem-nat-gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02298f8bad7ab92bf",
            "id": "nat-007c3977b87ab6687",
            "network_interface_id": "eni-0c57e0722fbdbce4e",
            "private_ip": "172.31.2.65",
            "public_ip": "3.216.87.114",
            "subnet_id": "subnet-0b62d8dd6811d32c8"
          },
          "dependencies": [
            "aws_eip.aem-eip",
            "aws_subnet.aem-subnet-private-1a",
            "aws_subnet.aem-subnet-public-1a",
            "aws_vpc.aem-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "aem-acl-default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:449780421507:network-acl/acl-001b8b0094d40dd4c",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-001b8b0094d40dd4c",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "449780421507",
            "subnet_ids": [],
            "tags": {
              "Creator": "Terraform",
              "Name": "aem-default-acl"
            },
            "vpc_id": "vpc-0f6e9f116f774fde0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.aem-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "aem-route-internet-gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0eba42a140f257c14",
            "id": "r-rtb-049a1a26b184285f11080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-049a1a26b184285f1",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": null,
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.aem-igw",
            "aws_vpc.aem-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "aem-route-nat-gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-01da6562c92f3bf1d1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-007c3977b87ab6687",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-01da6562c92f3bf1d",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": null,
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.aem-eip",
            "aws_nat_gateway.aem-nat-gateway",
            "aws_route_table.aem-rtb-ig",
            "aws_subnet.aem-subnet-private-1a",
            "aws_subnet.aem-subnet-public-1a",
            "aws_vpc.aem-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "aem-rtb-ig",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-01da6562c92f3bf1d",
            "owner_id": "449780421507",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Creator": "Terraform",
              "Name": "aem-rtb"
            },
            "vpc_id": "vpc-0f6e9f116f774fde0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.aem-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "aem-rtba-private-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09ef721497dc5e7a9",
            "route_table_id": "rtb-01da6562c92f3bf1d",
            "subnet_id": "subnet-06fbc3b86e40a350d"
          },
          "dependencies": [
            "aws_route_table.aem-rtb-ig",
            "aws_subnet.aem-subnet-private-1a",
            "aws_vpc.aem-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "aem-rtba-private-1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0890e95950aed80fa",
            "route_table_id": "rtb-01da6562c92f3bf1d",
            "subnet_id": "subnet-05f50e5b320155dd4"
          },
          "dependencies": [
            "aws_route_table.aem-rtb-ig",
            "aws_subnet.aem-subnet-private-1c",
            "aws_vpc.aem-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "aem-rtba-public-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07f05c8f758619739",
            "route_table_id": "rtb-049a1a26b184285f1",
            "subnet_id": "subnet-0b62d8dd6811d32c8"
          },
          "dependencies": [
            "aws_subnet.aem-subnet-private-1a",
            "aws_subnet.aem-subnet-public-1a",
            "aws_vpc.aem-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "aem-rtba-public-1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03d0fe9ae6b14a884",
            "route_table_id": "rtb-049a1a26b184285f1",
            "subnet_id": "subnet-0e01224be35626c1d"
          },
          "dependencies": [
            "aws_subnet.aem-subnet-private-1c",
            "aws_subnet.aem-subnet-public-1c",
            "aws_vpc.aem-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "aem-sg-default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:449780421507:security-group/sg-08b7845c079056b12",
            "description": "aem-default",
            "egress": [],
            "id": "sg-08b7845c079056b12",
            "ingress": [],
            "name": "aem-default",
            "name_prefix": "",
            "owner_id": "449780421507",
            "revoke_rules_on_delete": false,
            "tags": {
              "Creator": "Terraform",
              "Description": "aem-sg-default",
              "Name": "aem-sg-default"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f6e9f116f774fde0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.aem-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "aem-default-inbound-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "172.31.0.0/16"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-3003691776",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-08b7845c079056b12",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.aem-sg-default",
            "aws_vpc.aem-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "aem-default-outbound-sg-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-2874698094",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-08b7845c079056b12",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.aem-sg-default",
            "aws_vpc.aem-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "aem-subnet-private-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:449780421507:subnet/subnet-06fbc3b86e40a350d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "172.31.1.0/24",
            "id": "subnet-06fbc3b86e40a350d",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "449780421507",
            "tags": {
              "Creator": "Terraform",
              "Name": "aem-subnet-private-1a"
            },
            "tags_all": {
              "Creator": "Terraform",
              "Name": "aem-subnet-private-1a"
            },
            "vpc_id": "vpc-0f6e9f116f774fde0"
          },
          "dependencies": [
            "aws_vpc.aem-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "aem-subnet-private-1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:449780421507:subnet/subnet-05f50e5b320155dd4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.31.3.0/24",
            "id": "subnet-05f50e5b320155dd4",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "449780421507",
            "tags": {
              "Creator": "Terraform",
              "Name": "aem-subnet-private-1c"
            },
            "tags_all": {
              "Creator": "Terraform",
              "Name": "aem-subnet-private-1c"
            },
            "vpc_id": "vpc-0f6e9f116f774fde0"
          },
          "dependencies": [
            "aws_vpc.aem-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "aem-subnet-public-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:449780421507:subnet/subnet-0b62d8dd6811d32c8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "172.31.2.0/24",
            "id": "subnet-0b62d8dd6811d32c8",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "449780421507",
            "tags": {
              "Creator": "Terraform",
              "Name": "aem-subnet-public-1a"
            },
            "tags_all": {
              "Creator": "Terraform",
              "Name": "aem-subnet-public-1a"
            },
            "vpc_id": "vpc-0f6e9f116f774fde0"
          },
          "dependencies": [
            "aws_subnet.aem-subnet-private-1a",
            "aws_vpc.aem-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "aem-subnet-public-1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:449780421507:subnet/subnet-0e01224be35626c1d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.31.4.0/24",
            "id": "subnet-0e01224be35626c1d",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "449780421507",
            "tags": {
              "Creator": "Terraform",
              "Name": "aem-subnet-public-1c"
            },
            "tags_all": {
              "Creator": "Terraform",
              "Name": "aem-subnet-public-1c"
            },
            "vpc_id": "vpc-0f6e9f116f774fde0"
          },
          "dependencies": [
            "aws_subnet.aem-subnet-private-1c",
            "aws_vpc.aem-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "aem-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:449780421507:vpc/vpc-0f6e9f116f774fde0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-067b28d9aa1516812",
            "default_route_table_id": "rtb-049a1a26b184285f1",
            "default_security_group_id": "sg-0d430255b496b865c",
            "dhcp_options_id": "dopt-8e0858f5",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0f6e9f116f774fde0",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-049a1a26b184285f1",
            "owner_id": "449780421507",
            "tags": {
              "Creator": "Terraform",
              "Environment": "aem",
              "Name": "aem-vpc"
            },
            "tags_all": {
              "Creator": "Terraform",
              "Environment": "aem",
              "Name": "aem-vpc"
            }
          }
        }
      ]
    }
  ]
}